[n/a] Get tests working

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     "autoload": {
         "psr-4": {
             "viget\\generator\\": "src/",
-            "vigetgenerator\\fixtures\\": "tests/fixtures/"
+            "vigetgeneratortests\\fixtures\\": "tests/fixtures/"
         }
     },
     "minimum-stability": "dev",
